--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/united_nations"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:screenOrientation="portrait"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".activity.MainActivity"
@@ -33,7 +33,8 @@
         <activity
             android:name=".activity.RoomBattleFieldActivity"
             android:label="@string/title_activity_room_battle_field"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.TestActivity"></activity>
     </application>
 
 </manifest>
