--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
         <activity
             android:name=".activity.UserInfoActivity"
             android:label="@string/title_activity_user_info"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activity.EndOfGameActivity"
+            android:label="@string/title_activity_end_of_game"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
