--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:label="@string/title_activity_user_info"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
+            android:parentActivityName=".activity.StartActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.EndOfGameActivity"
