add test interaction code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,21 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".activity.RoomsActivity"
-            android:label="@string/title_activity_rooms"
             android:configChanges="orientation"
+            android:label="@string/title_activity_rooms"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.BattleFieldActivity"
-            android:label="@string/title_activity_room_battle_field"
             android:configChanges="orientation"
+            android:label="@string/title_activity_room_battle_field"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.RoomBattleFieldActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
             android:parentActivityName=".activity.StartActivity"
-             />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.StartActivity"
             android:configChanges="orientation"
@@ -39,24 +38,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.StatisticActivity"
+        <activity
+            android:name=".activity.StatisticActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".activity.StartActivity"/>
+            android:parentActivityName=".activity.StartActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.UserInfoActivity"
-            android:label="@string/title_activity_user_info"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
+            android:label="@string/title_activity_user_info"
             android:parentActivityName=".activity.StartActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.EndOfGameActivity"
-            android:label="@string/title_activity_end_of_game"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
+            android:label="@string/title_activity_end_of_game"
             android:parentActivityName=".activity.StartActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.TestInteraction"></activity>
     </application>
 
 </manifest>
