--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     testCompile 'junit:junit:4.12'
+
+    implementation 'com.google.android.gms:play-services-ads:15.0.0'
 }
