--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "27.0.0"
-
     defaultConfig {
-        applicationId "com.example.mishka.flagmemorine"
+        applicationId 'com.rodionov.mishka.flagmemorine'
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -17,10 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
@@ -29,6 +30,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     testCompile 'junit:junit:4.12'
-
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
 }
