--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mishka.flagmemorine">
+    package="com.rodionov.mishka.flagmemorine">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -18,19 +18,19 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.BattleFieldActivity"
+            android:name="com.rodionov.mishka.flagmemorine.activity.BattleFieldActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_battle_field"
-            android:parentActivityName=".activity.StartActivity"
+            android:parentActivityName="com.rodionov.mishka.flagmemorine.activity.StartActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.RoomBattleFieldActivity"
+            android:name="com.rodionov.mishka.flagmemorine.activity.RoomBattleFieldActivity"
             android:configChanges="orientation"
-            android:parentActivityName=".activity.StartActivity"
+            android:parentActivityName="com.rodionov.mishka.flagmemorine.activity.StartActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.StartActivity"
+            android:name="com.rodionov.mishka.flagmemorine.activity.StartActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -40,29 +40,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.StatisticActivity"
+            android:name="com.rodionov.mishka.flagmemorine.activity.StatisticActivity"
             android:configChanges="orientation"
-            android:parentActivityName=".activity.StartActivity"
+            android:parentActivityName="com.rodionov.mishka.flagmemorine.activity.StartActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.UserInfoActivity"
+            android:name="com.rodionov.mishka.flagmemorine.activity.UserInfoActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_user_info"
-            android:parentActivityName=".activity.StartActivity"
+            android:parentActivityName="com.rodionov.mishka.flagmemorine.activity.StartActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.EndOfGameActivity"
+            android:name="com.rodionov.mishka.flagmemorine.activity.EndOfGameActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_end_of_game"
-            android:parentActivityName=".activity.StartActivity"
+            android:parentActivityName="com.rodionov.mishka.flagmemorine.activity.StartActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.TestInteraction" />
-        <activity android:name=".activity.WaitUserActivity"
+        <activity android:name="com.rodionov.mishka.flagmemorine.activity.TestInteraction" />
+        <activity android:name="com.rodionov.mishka.flagmemorine.activity.WaitUserActivity"
             android:configChanges="orientation"
             android:label="@string/title_wait_user_activity"
-            android:parentActivityName=".activity.StartActivity"
+            android:parentActivityName="com.rodionov.mishka.flagmemorine.activity.StartActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
