--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'eu.davidea:flipview:1.1.3'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
+//    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     testCompile 'junit:junit:4.12'
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
 }
