--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,13 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:design:27.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'eu.davidea:flipview:1.1.3'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.android.support:recyclerview-v7:27.1.1'
 //    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     testCompile 'junit:junit:4.12'
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
