--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.BattleFieldActivity"
+            android:name=".activity.SingleplayerActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_battle_field"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.RoomBattleFieldActivity"
+            android:name=".activity.MultiplayerActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
